SSH Keymanagement, fix listing on mobile.
Ensure that the SSH key listing will scale correctly to smaller screens.

--- a/src/bitu/static/css/bitu-codex.css
+++ b/src/bitu/static/css/bitu-codex.css
@@ -318,6 +318,10 @@ nav ul {
 
 
 /* fake tables */
+table {
+    width: 100%;
+}
+
 table, thead, tbody, th, td, tr {
     display: block;
 }
@@ -342,6 +346,10 @@ td {
     position: relative;
     padding-left: 25vw;
     margin-bottom: 1vh;
+}
+
+td a.cdx-button {
+    margin-top: 5px;
 }
 
 .sshkey {
